--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-asynk-resource",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "const resource = useAsyncResource(resolve => load => commit, [...dependencyList)",
   "main": "dist/index.js",
   "types": "types",
@@ -20,6 +20,7 @@
     "react": "^17.0.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.11"
+    "@types/react": "^17.0.11",
+    "typescript": "^4.3.5"
   }
 }
